--- a/package.json
+++ b/package.json
@@ -22,5 +22,16 @@
   "bugs": {
     "url": "https://github.com/claytongulick/geodemo/issues"
   },
-  "homepage": "https://github.com/claytongulick/geodemo#readme"
+  "homepage": "https://github.com/claytongulick/geodemo#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "compression": "^1.7.2",
+    "express": "^4.16.3",
+    "glob": "^7.1.2",
+    "helmet": "^3.12.0",
+    "lodash": "^4.17.10",
+    "method-override": "^2.3.10",
+    "morgan": "^1.9.0",
+    "winston": "^2.4.2"
+  }
 }
